<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7DCF4"
    android:foregroundTint="#E35988"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/titulo"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="214dp"
        android:layout_height="54dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#121212"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="217dp"
        android:layout_height="58dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btEnviarDatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <Button
        android:id="@+id/btEnviarDatos"
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:backgroundTint="#341773"
        android:text="@string/enviarDatos"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />


    <Button
        android:id="@+id/btnCambiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#341773"
        android:onClick="Siguiente"
        android:text="@string/etbutton"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btEnviarDatos" />
</androidx.constraintlayout.widget.ConstraintLayout>
